css main index- contrast fixed

--- a/css/small.css
+++ b/css/small.css
@@ -54,7 +54,7 @@ h2 {
 
 */
 body {
-	background-color: #9094b8;
+	background-color: #9094b8e0;
 	font-family: "Open Sans", sans-serif;
 	padding: 5px 25px;
 	font-size: 18px;
